--- a/style.css
+++ b/style.css
@@ -1,14 +1,4 @@
-/* :root {
-    --height-header: 60px;
-    --height-todolist: 300px;
-    --height-todolist-header: 30px;
 
-    --width-todolist: 400px;
-
-    --color-green: rgb(30, 255, 0);
-    --color-red-button: rgb(148, 21, 21);
-    --color-red-li-hover: rgb(27, 172, 8);
-} */
 
 * {
     margin: 0;
@@ -47,6 +37,10 @@
     width: 33.33%;
     padding: 0 20px 0 20px;
 }
+
+.counter_row:hover, .counter_column:hover {
+    text-decoration: underline blue;
+  }
 
 .task_list_section {
     width: 100%;
